--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "lucide-react": "^0.288.0",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "axios": "^1.5.0",
-    "styled-components": "^6.0.7",
-    "lucide-react": "^0.288.0"
+    "styled-components": "^6.0.7"
   },
   "browserslist": {
     "production": [
